--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<li>충돌</li>
 			<li>충돌해결</li>
 			<li>원격저장소</li>
-			<li>push</li>
+			<li>push.egoing</li>
 			<li>pull</li>
 		</ul>
 	</body>
