pull.leezche 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li>충돌해결</li>
 			<li>원격저장소</li>
 			<li>push.egoing</li>
-			<li>pull</li>
+			<li>pull.leezche</li>
 		</ul>
 	</body>
 </html>
