--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<li>충돌해결</li>
 			<li>원격저장소</li>
 			<li>push.egoing</li>
-			<li>pull.leezche</li>
+			<li>pull.leezche2</li>
 		</ul>
 	</body>
 </html>
